--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 /* Structure */
-body {
+html, body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
@@ -14,20 +14,17 @@ body {
 }
 
 #content {
-	padding-bottom: 100px;   /* Height of the footer element */
+	padding-bottom: 0px;   /* Height of the footer element */
 }
 
 #footer {
 	width: 100%;
 	height: 100px;
-	position: absolute;
-	bottom: 0;
-	left: 0;
 }
 
 /* Site specific */
 #map
 { 
-	width: 800px; 
-	height: 650px
+	width: 500px; 
+	height: 300px;
 }
