--- a/style/style.css
+++ b/style/style.css
@@ -14,12 +14,13 @@ html, body {
 }
 
 #content {
-	padding-bottom: 0px;   /* Height of the footer element */
+	width: 100%;
+	height: auto;
+	float: left;
 }
 
 #footer {
 	width: 100%;
-	height: 100px;
 	float: left;
 }
 
@@ -45,7 +46,7 @@ html, body {
 	margin: 2px;
 }
 
-.listItem p
+p
 {
 	margin: 0;
 	padding: 0;
